Collapse computed reversible result locals